<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:fillViewport="true"
        style="@style/MatchMatch">

    <android.support.constraint.ConstraintLayout
            style="@style/MatchMatch"
            android:padding="30dp">

        <LinearLayout
                style="@style/MatchWrap"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="MissingConstraints">

            <TextView
                    android:id="@+id/nView1"
                    style="@style/WrapWrap.Black.20"
                    android:text="@string/pp_text_1"
                    android:textSize="20sp"/>

            <ImageView
                    android:id="@+id/nView2"
                    style="@style/Cube130"
                    android:src="@mipmap/theme_preview"
                    android:contentDescription="@string/app_name"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/nView3"
                    style="@style/WrapWrap.Black.14"
                    android:text="@string/app_name"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/nView4"
                    style="@style/WrapWrap.Black.14"
                    android:text="@string/pp_text_2"
                    android:gravity="center"
                    android:layout_marginTop="40dp"/>

            <Button
                    android:id="@+id/nView5"
                    style="@style/MatchWrap.White.14"
                    android:textColor="@drawable/button_green_color"
                    android:background="@drawable/button_green"
                    android:text="@string/pp_text_3"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/nView6"
                    style="@style/WrapWrap.Black.14"
                    android:text="@string/pp_text_4"
                    android:paddingTop="10dp"
                    android:layout_marginTop="40dp"
            />

            <TextView
                    android:id="@+id/nView7"
                    style="@style/WrapWrap.Blue.14"
                    android:text="@string/pp_text_5"
                    android:paddingBottom="10dp"
            />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>