<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" style="@style/Verical.WrapWrap.White">

    <ImageView android:layout_width="300dp"
               android:layout_height="150dp"
               android:scaleType="centerCrop"
               android:contentDescription="@string/apply_text_4"
               android:src="@drawable/banner_kplus"/>

    <TextView
            style="@style/MatchWrap.Black.14"
            android:padding="7dp"
            android:gravity="center"
            android:text="@string/apply_text_1"/>

    <RelativeLayout
            style="@style/MatchWrap"
            android:padding="10dp">

        <Button
                android:id="@+id/nView1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="4dp"
                android:background="@drawable/button_cancel"
                android:text="@string/apply_text_2"
                android:textColor="@drawable/button_cancel_color_press"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="RelativeOverlap"/>

            <LinearLayout
                    android:id="@+id/nView2"
                    android:layout_width="170dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_green">

                <ImageView
                        style="@style/btnGoogleImage" tools:ignore="ContentDescription"/>

                <TextView
                        style="@style/btnText"
                        android:textColor="@drawable/green_state"
                        android:text="@string/apply_text_3"/>

            </LinearLayout>

    </RelativeLayout>

</LinearLayout>