<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:tools="http://schemas.android.com/tools" android:id="@+id/rlSplash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">


    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:visibility="visible">


        <RelativeLayout
                android:id="@+id/rlSplashContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/gifview"
                tools:ignore="UnknownId">

            <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_dont"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            <RelativeLayout
                    android:id="@+id/rlLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_marginTop="20dp"
                        android:id="@+id/loading_animation"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/stop" />

                <TextView
                        android:layout_below="@id/loading_animation"
                        android:id="@+id/tbLoading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/dontleave"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                />



            </RelativeLayout>


            <LinearLayout
                    android:id="@+id/buttonDownload"
                    style="@style/Buttons"

                    android:background="@drawable/install_button"
                    android:layout_alignParentBottom="true"
                    android:textAllCaps="false"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15sp">

                <ImageView
                        android:layout_marginTop="10dp"
                        style="@style/Image_GB_Logo" />

                <TextView
                        android:layout_weight="1.9"
                        android:textSize="15sp"
                        style="@style/TextView_GB_Logo"
                        android:layout_gravity="center"
                        android:text="@string/download_sms" />
            </LinearLayout>

            <LinearLayout
                    android:layout_above="@id/buttonDownload"
                    android:id="@+id/lnLogo"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlLoading"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="15dp">

                <LinearLayout
                        style="@style/dont_leave_reason">

                    <ImageView
                            style="@style/dont_leave_reason_image"/>

                    <TextView
                            style="@style/dont_leave_reason_text"
                            android:text="@string/reason1"/>
                </LinearLayout>
                <LinearLayout
                        style="@style/dont_leave_reason">

                    <ImageView
                            style="@style/dont_leave_reason_image"/>

                    <TextView
                            style="@style/dont_leave_reason_text"
                            android:text="@string/reason4"/>
                </LinearLayout>
                <LinearLayout
                        style="@style/dont_leave_reason">

                    <ImageView
                            style="@style/dont_leave_reason_image"/>

                    <TextView
                            style="@style/dont_leave_reason_text"
                            android:text="@string/reason5"/>
                </LinearLayout>
                <LinearLayout
                        style="@style/dont_leave_reason">

                    <ImageView
                            style="@style/dont_leave_reason_image"/>

                    <TextView
                            style="@style/dont_leave_reason_text"
                            android:text="@string/reason6" android:fontFamily="@font/montserrat_bold"/>
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>