<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="activity"
                type="com.example.layout2019.screen.mainscreen.MainScreenLibrary"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:background="@drawable/bg_main_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >



    <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/MatchWrap"
            android:id="@+id/scrollViewId"

            android:orientation="vertical"
            android:gravity="center"
            android:fadeScrollbars="false"
            tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
                style="@style/MatchMatch"
                android:layout_height="wrap_content"
        >

            <TextView
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy"
                    android:textColor="@color/buttons_blue_color"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.openPrivacyPolicy()}"
            />

            <Button
                    app:layout_constraintTop_toBottomOf="@id/privacy"
                    android:id="@+id/btn_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/button_whatsapp"
                    android:layout_marginTop="17dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.redirectToWhatsAppGP()}"
            >
            </Button>

            <Button
                    app:layout_constraintTop_toBottomOf="@id/btn_whatsapp"
                    android:id="@+id/btn_live_wallpapers"
                    android:layout_width="match_parent"
                    style="@style/blue_button"
                    android:text="@string/live_wallpaper"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.redirectToLiveWallpaper()}">
            </Button>

            <Button
                    app:layout_constraintTop_toBottomOf="@id/btn_live_wallpapers"
                    android:id="@+id/btn_wallpaper"
                    android:layout_width="match_parent"
                    style="@style/blue_button"
                    android:text="@string/wallpaper"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.redirectToWallpapers()}">
            </Button>

            <RelativeLayout
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_wallpaper"
                    android:id="@+id/nativeAdsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/loading_ad"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading Add..."
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="30dp"
                        android:layout_centerInParent="true"/>
            </RelativeLayout>


            <android.support.constraint.ConstraintLayout
                    app:layout_constraintTop_toBottomOf="@id/nativeAdsContainer"
                    android:id="@+id/btn_apply"
                    style="@style/green_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.applyTheme()}">
                <TextView

                        android:layout_marginTop="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply_text"
                        android:textSize="20sp"
                        android:layout_marginBottom="10sp"
                        android:textColor="@drawable/button_text_color_blue"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner_bg"
                    app:layout_constraintTop_toBottomOf="@id/nativeAdsContainer"
                    app:layout_constraintRight_toRightOf="@id/btn_apply"
            >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ad"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        tools:ignore="MissingConstraints"/>

            </android.support.constraint.ConstraintLayout>

            <Button
                    app:layout_constraintTop_toBottomOf="@id/btn_apply"
                    android:id="@+id/btn_moreApp"
                    android:layout_width="match_parent"
                    style="@style/blue_button"
                    android:text="@string/get_more"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp"
                    tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.redirectToMoreApps()}"
            >
            </Button>

            <android.support.constraint.ConstraintLayout
                    app:layout_constraintTop_toBottomOf="@id/btn_moreApp"
                    android:id="@+id/btn_our_best"
                    style="@style/blue_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginRight="55dp" tools:ignore="MissingConstraints"
                    android:onClick="@{() -> activity.redirectToOurBestThemeGP()}"
            >
                <TextView
                        style="@style/TextView_GB_Logo2"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/our_best"
                        app:layout_constraintEnd_toStartOf="@id/imageGP"
                        tools:layout_editor_absoluteY="4dp"
                        android:layout_height="22dp"/>

                <ImageView
                        android:id="@+id/imageGP"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginRight="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="23dp"
                        android:layout_width="80dp"
                        android:src="@drawable/google_play"
                />

            </android.support.constraint.ConstraintLayout>
            <ImageView

                    android:id="@+id/nImageShake"
                    style="@style/Image_shake"
                    android:layout_height="46dp"
                    android:layout_gravity="center"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_our_best"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:onClick="@{() -> activity.shareTheme()}"
            />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>